Add Spring Data JPA.